[package]
name = "bare_os"
version = "0.1.0"
edition = "2018"
authors = ["Abdur-Raqeeb Ajao <ajaorqb@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
